네이밍 review -> room 으로 변경, 리스트 아이템 구현, api 연결 진행

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         app:tabTextColor="@color/hint_text"
         app:tabUnboundedRipple="true" />
     <androidx.viewpager.widget.ViewPager
-        android:id="@+id/reviewPager"
+        android:id="@+id/roomPager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/pagerTab"
