--- a/app/src/main/res/layout/fragment_all_room.xml
+++ b/app/src/main/res/layout/fragment_all_room.xml
@@ -21,7 +21,7 @@
         android:layout_height="match_parent">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/allReviewList"
+            android:id="@+id/allRoomList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
