--- a/app/src/main/res/layout/item_room.xml
+++ b/app/src/main/res/layout/item_room.xml
@@ -4,8 +4,7 @@
     <data>
 
         <import type="android.view.View" />
-
-        <import type="com.devmin.android_review.entity.Room" />
+        <import type="com.devmin.android_review.entity.Room"/>
 
         <variable
             name="room"
@@ -49,6 +48,7 @@
                     app:layout_constraintTop_toTopOf="parent">
 
                     <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/thumbnail"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:scaleType="centerCrop"
@@ -85,12 +85,12 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="12dp"
-                    app:layout_constraintTop_toBottomOf="@id/lastDate"
+                    app:layout_goneMarginTop="22dp"
                     app:SK_cornerRadius="10dp"
                     app:SK_padding="5dp"
                     app:SK_shapeType="rect"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_goneMarginTop="22dp">
+                    app:layout_constraintTop_toBottomOf="@id/lastDate">
 
                     <TextView
                         android:layout_width="wrap_content"
