--- a/app/src/main/res/layout/fragment_all_room.xml
+++ b/app/src/main/res/layout/fragment_all_room.xml
@@ -49,7 +49,7 @@
                 android:text="@string/go_to_top"
                 android:textColor="@color/main_text"
                 android:textSize="14sp"
-                android:visibility="@{viewModel.isTop ? View.VISIBLE:View.GONE}"
+                android:visibility="@{viewModel.isEmpty ? View.GONE:View.VISIBLE}"
                 app:bgCornerRadius="@{14.2f}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
