--- a/app/src/main/res/layout/fragment_favorite_room.xml
+++ b/app/src/main/res/layout/fragment_favorite_room.xml
@@ -19,15 +19,48 @@
             type="ViewHandler" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/roomContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/favoriteReviewList"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_height="match_parent">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/favoriteReviewList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/goToTop"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:background="@color/list_loading"
+                android:gravity="center_horizontal"
+                android:lineSpacingExtra="9.5sp"
+                android:onClick="@{() -> viewHandler.goToTop()}"
+                android:paddingStart="10dp"
+                android:paddingTop="6.5dp"
+                android:paddingEnd="10dp"
+                android:paddingBottom="6.5dp"
+                android:text="@string/go_to_top"
+                android:textColor="@color/main_text"
+                android:textSize="14sp"
+                android:visibility="@{viewModel.isEmpty ? View.GONE:View.VISIBLE}"
+                app:bgCornerRadius="@{14.2f}"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/favoriteReviewList" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                app:layout_constraintTop_toBottomOf="@id/goToTop" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
 </layout>
