--- a/app/src/main/res/layout/item_room.xml
+++ b/app/src/main/res/layout/item_room.xml
@@ -146,11 +146,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp"
+                    android:layout_marginTop="10dp"
                     app:SK_cornerRadius="6dp"
                     app:SK_shapeType="rect"
-                    app:layout_constraintBottom_toBottomOf="@id/like"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@id/like">
+                    app:layout_constraintTop_toBottomOf="@id/rate">
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:layout_width="match_parent"
