--- a/app/src/main/res/layout/item_room.xml
+++ b/app/src/main/res/layout/item_room.xml
@@ -85,6 +85,7 @@
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
                         android:maxLines="1"
+                        android:textStyle="bold"
                         android:textColor="@color/hint_text"
                         android:textSize="10sp"
                         tools:ignore="SmallSp"
@@ -105,11 +106,12 @@
                     app:layout_constraintTop_toBottomOf="@id/lastDate"
                     app:layout_goneMarginTop="22dp">
 
-                    <TextView
+                    <androidx.appcompat.widget.AppCompatTextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
                         android:maxLines="1"
+                        android:textStyle="bold"
                         android:text="@{room.name}"
                         android:textColor="@color/main_text"
                         android:textSize="16sp"
@@ -157,6 +159,7 @@
                         android:layout_height="wrap_content"
                         android:text="@{@string/price(room.description.price)}"
                         android:gravity="end"
+                        android:textStyle="bold"
                         android:textColor="@color/main_text"
                         android:textSize="14sp"
                         tools:text="15000원" />
