--- a/app/src/main/res/layout/fragment_room_end.xml
+++ b/app/src/main/res/layout/fragment_room_end.xml
@@ -127,7 +127,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="start"
-                        android:layout_marginEnd="13dp"
+                        android:padding="20dp"
                         android:background="?attr/selectableItemBackground"
                         android:onClick="@{() -> viewHandler.back()}"
                         android:src="@drawable/icon_back" />
@@ -141,8 +141,6 @@
                         android:padding="20dp"
                         android:onClick="@{() -> viewHandler.like()}"
                         android:src="@{viewModel.favorite ? @drawable/icon_like_on:@drawable/icon_like_off}"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/rate"
                         tools:src="@drawable/icon_like_on" />
                 </androidx.appcompat.widget.Toolbar>
             </com.google.android.material.appbar.CollapsingToolbarLayout>
