--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,8 @@
 
     <color name="list_loading">#DEDEDE</color>
 
+    <color name="filter_background">#eeeeee</color>
+
     <color name="hint_text">#d8d8d8</color>
     <color name="sub_main_text">#525252</color>
     <color name="main_text">#212121</color>
