--- a/app/src/main/res/layout/fragment_all_room.xml
+++ b/app/src/main/res/layout/fragment_all_room.xml
@@ -7,6 +7,7 @@
         <import type="com.devmin.android_review.presentation.app.room.AllRoomFragment.ViewHandler" />
 
         <import type="com.devmin.android_review.presentation.app.room.AllRoomFragmentViewModel" />
+        <import type="com.devmin.android_review.entity.Result" />
 
         <variable
             name="viewModel"
@@ -53,7 +54,7 @@
                     android:text="@string/go_to_top"
                     android:textColor="@color/main_text"
                     android:textSize="14sp"
-                    android:visibility="@{viewModel.isEmpty ? View.GONE:View.VISIBLE}"
+                    app:visible="@{viewModel.isResult == Result.SUCCESS}"
                     app:bgCornerRadius="@{14.2f}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -63,6 +64,16 @@
                     android:layout_width="match_parent"
                     android:layout_height="80dp"
                     app:layout_constraintTop_toBottomOf="@id/goToTop" />
+
+                <include
+                    layout="@layout/layout_base"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:viewHandler="@{viewHandler}"
+                    app:viewModel="@{viewModel}"
+                    app:visible="@{viewModel.isResult != Result.SUCCESS}" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
