--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,8 +24,9 @@
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/roomPager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/pagerTab"
+        app:layout_constraintBottom_toBottomOf="parent"
         />
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/contentFrame"
