--- a/app/src/main/res/layout/fragment_favorite_room.xml
+++ b/app/src/main/res/layout/fragment_favorite_room.xml
@@ -12,6 +12,7 @@
         <import type="com.devmin.android_review.presentation.app.room.FavoriteRoomFragmentViewModel" />
 
         <import type="com.devmin.android_review.entity.Sort" />
+
         <import type="com.devmin.android_review.entity.Result" />
 
         <variable
@@ -23,125 +24,142 @@
             type="ViewHandler" />
     </data>
 
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/roomContainer"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:layout_height="match_parent">
+
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appBarLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent">
+
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_scrollFlags="scroll|enterAlwaysCollapsed">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <androidx.constraintlayout.widget.Guideline
+                        android:id="@+id/lgl"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:orientation="vertical"
+                        app:layout_constraintGuide_begin="22dp" />
+
+                    <androidx.constraintlayout.widget.Guideline
+                        android:id="@+id/rgl"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:orientation="vertical"
+                        app:layout_constraintGuide_end="22dp" />
+
+                    <View
+                        android:id="@+id/sortBg"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_marginTop="10dp"
+                        android:background="@color/filter_background"
+                        app:bgCornerRadius="@{15f}"
+                        app:layout_constraintBottom_toBottomOf="@id/sortBgl"
+                        app:layout_constraintEnd_toEndOf="@id/rgl"
+                        app:layout_constraintStart_toStartOf="@id/lgl"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/latest"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginTop="5dp"
+                        android:background="?attr/selectableItemBackground"
+                        android:onClick="@{() -> viewHandler.sort(Sort.LATEST)}"
+                        android:padding="10dp"
+                        android:text="@string/latest"
+                        android:textColor="@{viewModel.sortType == Sort.LATEST ? @color/main_text:@color/hint_text}"
+                        android:textSize="12sp"
+                        app:layout_constraintEnd_toStartOf="@id/oldest"
+                        app:layout_constraintStart_toStartOf="@id/sortBg"
+                        app:layout_constraintTop_toTopOf="@id/sortBg"
+                        app:text_style="@{viewModel.sortType == Sort.LATEST}"
+                        tools:textColor="@color/main_text"
+                        tools:textStyle="bold" />
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/oldest"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="?attr/selectableItemBackground"
+                        android:onClick="@{() -> viewHandler.sort(Sort.OLDEST)}"
+                        android:padding="10dp"
+                        android:text="@string/oldest"
+                        android:textColor="@{viewModel.sortType == Sort.OLDEST ? @color/main_text:@color/hint_text}"
+                        android:textSize="12sp"
+                        app:layout_constraintBottom_toBottomOf="@id/latest"
+                        app:layout_constraintEnd_toStartOf="@id/rateDesc"
+                        app:layout_constraintStart_toEndOf="@id/latest"
+                        app:layout_constraintTop_toTopOf="@id/latest"
+                        app:text_style="@{viewModel.sortType == Sort.OLDEST}"
+                        tools:textColor="@color/main_text"
+                        tools:textStyle="bold" />
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/rateDesc"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="?attr/selectableItemBackground"
+                        android:onClick="@{() -> viewHandler.sort(Sort.RATE_DESC)}"
+                        android:padding="10dp"
+                        android:text="@string/rate_desc"
+                        android:textColor="@{viewModel.sortType == Sort.RATE_DESC ? @color/main_text:@color/hint_text}"
+                        android:textSize="12sp"
+                        app:layout_constraintBottom_toBottomOf="@id/latest"
+                        app:layout_constraintEnd_toStartOf="@id/rateAsc"
+                        app:layout_constraintStart_toEndOf="@id/oldest"
+                        app:layout_constraintTop_toTopOf="@id/latest"
+                        app:text_style="@{viewModel.sortType == Sort.RATE_DESC}"
+                        tools:textColor="@color/hint_text" />
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/rateAsc"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="5dp"
+                        android:background="?attr/selectableItemBackground"
+                        android:onClick="@{() -> viewHandler.sort(Sort.RATE_ASC)}"
+                        android:padding="10dp"
+                        android:text="@string/rate_asc"
+                        android:textColor="@{viewModel.sortType == Sort.RATE_ASC ? @color/main_text:@color/hint_text}"
+                        android:textSize="12sp"
+                        app:layout_constraintBottom_toBottomOf="@id/latest"
+                        app:layout_constraintEnd_toEndOf="@id/sortBg"
+                        app:layout_constraintStart_toEndOf="@id/rateDesc"
+                        app:layout_constraintTop_toTopOf="@id/latest"
+                        app:text_style="@{viewModel.sortType == Sort.RATE_ASC}"
+                        tools:textColor="@color/hint_text" />
+
+                    <Space
+                        android:id="@+id/sortBgl"
+                        android:layout_width="match_parent"
+                        android:layout_height="5dp"
+                        app:layout_constraintTop_toBottomOf="@id/latest" />
+
+                    <androidx.constraintlayout.widget.Group
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        app:constraint_referenced_ids="sortBg,sortBgl,rateAsc,rateDesc,latest,oldest"
+                        app:visible="@{viewModel.isResult == Result.SUCCESS}" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
+        </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/lgl"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:orientation="vertical"
-                app:layout_constraintGuide_begin="22dp" />
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/rgl"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:orientation="vertical"
-                app:layout_constraintGuide_end="22dp" />
-
-            <View
-                android:id="@+id/sortBg"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginTop="10dp"
-                android:background="@color/filter_background"
-                app:bgCornerRadius="@{15f}"
-                app:layout_constraintBottom_toBottomOf="@id/sortBgl"
-                app:layout_constraintEnd_toEndOf="@id/rgl"
-                app:layout_constraintStart_toStartOf="@id/lgl"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/latest"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="5dp"
-                android:background="?attr/selectableItemBackground"
-                android:onClick="@{() -> viewHandler.sort(Sort.LATEST)}"
-                android:padding="10dp"
-                android:text="@string/latest"
-                android:textColor="@{viewModel.sortType == Sort.LATEST ? @color/main_text:@color/hint_text}"
-                android:textSize="12sp"
-                app:layout_constraintEnd_toStartOf="@id/oldest"
-                app:layout_constraintStart_toStartOf="@id/sortBg"
-                app:layout_constraintTop_toTopOf="@id/sortBg"
-                app:text_style="@{viewModel.sortType == Sort.LATEST}"
-                tools:textColor="@color/main_text"
-                tools:textStyle="bold" />
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/oldest"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="?attr/selectableItemBackground"
-                android:onClick="@{() -> viewHandler.sort(Sort.OLDEST)}"
-                android:padding="10dp"
-                android:text="@string/oldest"
-                android:textColor="@{viewModel.sortType == Sort.OLDEST ? @color/main_text:@color/hint_text}"
-                android:textSize="12sp"
-                app:layout_constraintBottom_toBottomOf="@id/latest"
-                app:layout_constraintEnd_toStartOf="@id/rateDesc"
-                app:layout_constraintStart_toEndOf="@id/latest"
-                app:layout_constraintTop_toTopOf="@id/latest"
-                app:text_style="@{viewModel.sortType == Sort.OLDEST}"
-                tools:textColor="@color/main_text"
-                tools:textStyle="bold" />
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/rateDesc"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="?attr/selectableItemBackground"
-                android:onClick="@{() -> viewHandler.sort(Sort.RATE_DESC)}"
-                android:padding="10dp"
-                android:text="@string/rate_desc"
-                android:textColor="@{viewModel.sortType == Sort.RATE_DESC ? @color/main_text:@color/hint_text}"
-                android:textSize="12sp"
-                app:layout_constraintBottom_toBottomOf="@id/latest"
-                app:layout_constraintEnd_toStartOf="@id/rateAsc"
-                app:layout_constraintStart_toEndOf="@id/oldest"
-                app:layout_constraintTop_toTopOf="@id/latest"
-                app:text_style="@{viewModel.sortType == Sort.RATE_DESC}"
-                tools:textColor="@color/hint_text" />
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/rateAsc"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="5dp"
-                android:background="?attr/selectableItemBackground"
-                android:onClick="@{() -> viewHandler.sort(Sort.RATE_ASC)}"
-                android:padding="10dp"
-                android:text="@string/rate_asc"
-                android:textColor="@{viewModel.sortType == Sort.RATE_ASC ? @color/main_text:@color/hint_text}"
-                android:textSize="12sp"
-                app:layout_constraintBottom_toBottomOf="@id/latest"
-                app:layout_constraintEnd_toEndOf="@id/sortBg"
-                app:layout_constraintStart_toEndOf="@id/rateDesc"
-                app:layout_constraintTop_toTopOf="@id/latest"
-                app:text_style="@{viewModel.sortType == Sort.RATE_ASC}"
-                tools:textColor="@color/hint_text" />
-
-            <Space
-                android:id="@+id/sortBgl"
-                android:layout_width="match_parent"
-                android:layout_height="5dp"
-                app:layout_constraintTop_toBottomOf="@id/latest" />
-
-            <androidx.constraintlayout.widget.Group
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                app:constraint_referenced_ids="sortBg,sortBgl,rateAsc,rateDesc,latest,oldest"
-                app:visible="@{viewModel.isResult == Result.SUCCESS}" />
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/favoriteReviewList"
@@ -149,34 +167,19 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 app:visible="@{viewModel.isResult == Result.SUCCESS}"
-                app:layout_constraintTop_toBottomOf="@id/sortBg" />
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <androidx.appcompat.widget.AppCompatTextView
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/goToTop"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:background="@color/list_loading"
-                android:gravity="center_horizontal"
-                android:lineSpacingExtra="9.5sp"
+                android:layout_marginEnd="40dp"
+                android:layout_marginBottom="40dp"
                 android:onClick="@{() -> viewHandler.goToTop()}"
-                android:paddingStart="10dp"
-                android:paddingTop="6.5dp"
-                android:paddingEnd="10dp"
-                android:paddingBottom="6.5dp"
-                android:text="@string/go_to_top"
-                android:textColor="@color/main_text"
-                android:textSize="14sp"
-                app:visible="@{viewModel.isResult == Result.SUCCESS}"
-                app:bgCornerRadius="@{14.2f}"
+                android:src="@drawable/icon_upward"
+                app:elevation="0dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/favoriteReviewList" />
-
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                app:layout_constraintTop_toBottomOf="@id/goToTop" />
+                app:layout_constraintBottom_toBottomOf="parent" />
 
             <include
                 layout="@layout/layout_base"
@@ -188,5 +191,5 @@
                 app:viewModel="@{viewModel}"
                 app:visible="@{viewModel.isResult != Result.SUCCESS}" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.core.widget.NestedScrollView>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
